# DataPlatform

./: .env.example  .env.terraform  .gitignore  CLAUDE.md  Makefile  README.md  main.py  pyproject.toml  pytest.ini  ruff.toml
config/: loader.py  settings.py
config/environments/: __init__.py
config/providers/: databases.yaml  exchanges.yaml  indicators.yaml  storage.yaml  streaming.yaml  sync.yaml
core/: __init__.py
core/interfaces/: __init__.py  cache.py  database.py  indicators.py  market_data.py  storage.py  streaming.py  streaming_consumer.py  streaming_producer.py
core/models/: __init__.py  market_data.py
core/utils/: config.py  gap_handling.py
core/validators/: __init__.py  market_data.py
data/backtest_results/: __init__.py
data/processed/: __init__.py
data/raw/: __init__.py
domain/indicators/: __init__.py  momentum.py  moving_averages.py  registry.py
factory/: __init__.py  client_factory.py
infrastructure/docker/: docker-compose.yml
monitoring/: README.md
monitoring/prometheus/: prometheus.yml
providers/aws/: __init__.py  kinesis.py  s3.py
providers/azure/: __init__.py
providers/binance/: __init__.py  rest_api.py  websocket.py
providers/coinbase/: __init__.py  rest_api.py  websocket.py
providers/gcp/: __init__.py
providers/kraken/: __init__.py  rest_api.py  websocket.py
providers/localstack/: __init__.py
providers/opensource/: __init__.py  clickhouse.py  kafka_stream.py  redis_client.py  (+2 more)
scripts/: init_project_structure.py  install-hooks.sh  load_symbol_mappings.py
services/: SERVICE_TEMPLATE.md
tests/: conftest.py
(+85 files in other folders)
